--- a/ansible/roles/infra_hard/tasks/setup_mqtt.yml
+++ b/ansible/roles/infra_hard/tasks/setup_mqtt.yml
@@ -1,17 +1,13 @@
 ---
 - name: "Setup mqtt directory"
   ansible.builtin.file:
-    path: "/{{ DATACORE }}/mqtt"
+    path: "/{{ DATACORE }}/{{ item }}"
     owner: "{{ USER_NAME }}"
     group: "{{ USER_NAME }}"
     state: directory
-
-- name: "Setup mqtt directory"
-  ansible.builtin.file:
-    path: "/{{ DATACORE }}/mqtt/config"
-    owner: "{{ USER_NAME }}"
-    group: "{{ USER_NAME }}"
-    state: directory
+  with_items:
+    - mqtt
+    - mqtt/config
 
 - name: "Copy basic configuration files"
   ansible.builtin.template:
