--- a/ansible/roles/infra_storage/tasks/setup_fdroid.yml
+++ b/ansible/roles/infra_storage/tasks/setup_fdroid.yml
@@ -1,24 +1,14 @@
 ---
 - name: "Setup datacore directory"
   ansible.builtin.file:
-    path: "/{{ DATACORE }}/fdroid"
+    path: "/{{ DATACORE }}/{{ item }}"
     owner: "{{ USER_NAME }}"
     group: "{{ USER_NAME }}"
     state: directory
-
-- name: "Setup fdroid apk directory"
-  ansible.builtin.file:
-    path: "/{{ DATACORE }}/fdroid/apk"
-    owner: "{{ USER_NAME }}"
-    group: "{{ USER_NAME }}"
-    state: directory
-
-- name: "Setup fdroid config directory"
-  ansible.builtin.file:
-    path: "/{{ DATACORE }}/fdroid/config"
-    owner: "{{ USER_NAME }}"
-    group: "{{ USER_NAME }}"
-    state: directory
+  with_items:
+    - fdroid
+    - fdroid/apk
+    - fdroid/config
 
 - name: "Check for authorized_keys"
   local_action: stat path=files/authorized_keys
