add grocy to manage inventory

--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -72,6 +72,7 @@
       - "{{ NEXUS_DOCKER_PUSH_PORT }}:{{ NEXUS_DOCKER_PUSH_PORT }}"
       - "{{ FDROID_PORT }}:{{ FDROID_PORT }}"
       - "{{ NEXTCLOUD_PORT }}:{{ NEXTCLOUD_PORT }}"
+      - "{{ GROCY_PORT }}:{{ GROCY_PORT }}"
       - "{{ ODOO_PORT }}:{{ ODOO_PORT }}"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
