--- a/ansible/roles/infra_storage/vars/main.yml
+++ b/ansible/roles/infra_storage/vars/main.yml
@@ -22,8 +22,13 @@ NEXTCLOUD_PORT: "8055"
 NEXTCLOUD_EXTERNAL_URL: "drive.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 NEXTCLOUD_DEFAULT_STATE: stopped
 
+GROCY_VERSION: "v3.3.0-ls148"
+GROCY_PORT: "8056"
+GROCY_EXTERNAL_URL: "stock.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+GROCY_DEFAULT_STATE: stopped
+
 ODOO_VERSION: "15.0"
-ODOO_PORT: "8056"
+ODOO_PORT: "8057"
 ODOO_EXTERNAL_URL: "erp.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 ODOO_DB_USER: "odoo"
 ODOO_DEFAULT_STATE: stopped
