--- a/ansible/roles/infra/vars/main.yml
+++ b/ansible/roles/infra/vars/main.yml
@@ -28,6 +28,7 @@ TRAEFIK_ENTRYPOINT_MAP:
   - { port: "{{ NEXUS_DOCKER_PUSH_PORT }}", name: "nexus_docker_push" }
   - { port: "{{ FDROID_PORT }}", name: "fdroid" }
   - { port: "{{ NEXTCLOUD_PORT }}", name: "nextcloud" }
+  - { port: "{{ GROCY_PORT }}", name: "grocy" }
   - { port: "{{ ODOO_PORT }}", name: "odoo" }
 
 NGINX_VERSION: "1.21.6"
