--- a/ansible/roles/infra_storage/tasks/main.yml
+++ b/ansible/roles/infra_storage/tasks/main.yml
@@ -8,5 +8,8 @@
 - import_tasks: setup_nextcloud.yml
   when: ("nextcloud" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
 
+- import_tasks: setup_grocy.yml
+  when: ("grocy" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
+
 - import_tasks: setup_odoo.yml
   when: ("erp" not in SKIP_SERVICES) and ansible_architecture in ["amd64", "x86_64"]
