update all services

--- a/ansible/roles/infra/vars/main.yml
+++ b/ansible/roles/infra/vars/main.yml
@@ -6,7 +6,7 @@ BACKUP_REMOTE_USER: "{{ BACKUP_CONFIGURATION.REMOTE_USER }}"
 BACKUP_DRIVE: "{{ BACKUP_CONFIGURATION.BACKUP_DRIVE }}"
 BACKUP_TOKEN: "{{ BACKUP_CONFIGURATION.BACKUP_TOKEN }}"
 
-TRAEFIK_VERSION: "2.5.4"
+TRAEFIK_VERSION: "2.6.1"
 TRAEFIK_FRONT_PORT: "8000"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 TRAEFIK_USE_LETSENCRYPT: false
@@ -30,15 +30,15 @@ TRAEFIK_ENTRYPOINT_MAP:
   - { port: "{{ NEXTCLOUD_PORT }}", name: "nextcloud" }
   - { port: "{{ ODOO_PORT }}", name: "odoo" }
 
-NGINX_VERSION: "1.21.4"
+NGINX_VERSION: "1.21.6"
 NGINX_FRONT_PORT: "8001"
 NGINX_EXTERNAL_URL: "home.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 
-PORTAINER_VERSION: "2.9.2"
+PORTAINER_VERSION: "2.11.1-alpine"
 PORTAINER_PORT: "8010"
 PORTAINER_EXTERNAL_URL: "portainer.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 
-NETDATA_VERSION: "v1.31.0"
+NETDATA_VERSION: "v1.33.1"
 NETDATA_PORT: "8011"
 NETDATA_EXTERNAL_URL: "monitor.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 NETDATA_DEFAULT_STATE: stopped
