--- a/ansible/roles/infra_social/vars/main.yml
+++ b/ansible/roles/infra_social/vars/main.yml
@@ -1,5 +1,5 @@
-WORDPRESS_VERSION: "5.8.1-php7.4"
-WORDPRESS_DB_VERSION: "10.4.10"
+WORDPRESS_VERSION: "5.9.1-php8.1"
+WORDPRESS_DB_VERSION: "10.7.3" # https://hub.docker.com/_/mariadb?tab=tags
 WORDPRESS_FRONT_PORT: "8040"
 WORDPRESS_EXTERNAL_URL: "blog.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 WORDPRESS_DEFAULT_STATE: stopped
