--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -42,26 +42,11 @@
     - {file: "{{ DOMAIN_CERT_NAME }}", mode: 644}
   when: "DOMAIN_CERT_NAME | length > 0 and DOMAIN_CERT_KEY_NAME | length > 0"
 
-- name: "Define traefik_image armv7l?"
-  ansible.builtin.set_fact:
-     traefik_image: "arm32v6/traefik:{{ TRAEFIK_VERSION }}"
-  when: ansible_architecture in ["armv7l"]
-
-- name: "Define traefik_image aarch64?"
-  ansible.builtin.set_fact:
-     traefik_image: "arm64v8/traefik:{{ TRAEFIK_VERSION }}"
-  when: ansible_architecture in ["aarch64"]
-
-- name: "Define traefik_image amd64?"
-  ansible.builtin.set_fact:
-     traefik_image: "traefik:{{ TRAEFIK_VERSION }}"
-  when: ansible_architecture in ["amd64", "x86_64"]
-
 # from: https://www.sheevaboite.fr/articles/traefik-reverse-proxy-https-containers-docker
 - name: "Launch traefik container version {{ TRAEFIK_VERSION }}"
   community.general.docker_container:
     name: "traefik"
-    image: "{{ traefik_image }}"
+    image: "traefik:{{ TRAEFIK_VERSION }}"
     state: started
     restart_policy: always
     recreate: yes
