update all but jenkins

--- a/ansible/roles/infra_ci/vars/main.yml
+++ b/ansible/roles/infra_ci/vars/main.yml
@@ -1,11 +1,11 @@
-GOGS_VERSION: "0.12.7"
+GOGS_VERSION: "0.12.9"
 GOGS_FRONT_PORT: "8021"
 GOGS_SSH_PORT: "{{ GIT_SSH_PORT }}"
 GOGS_EXTERNAL_URL: "git.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 GOGS_URL: "https://{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ GOGS_FRONT_PORT }}"
 GOGS_DEFAULT_STATE: stopped
 
-REDMINE_VERSION: "5.0.1"
+REDMINE_VERSION: "5.0.2"
 REDMINE_DB_VERSION: "10-alpine"
 REDMINE_DB_USER: "redmine_user"
 REDMINE_DB_PASS: "redmine_pass"
@@ -21,7 +21,7 @@ JENKINS_EXTERNAL_URL: "ci.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DE
 JENKINS_DEFAULT_STATE: stopped
 JENKINS_USER: "{{ DEFAULT_ADMIN_NAME }}"
 JENKINS_RESTART_DELAY: 100
-JENKINS_ENABLE_THEME: false
+JENKINS_ENABLE_THEME: true
 JENKINS_FORGE_GLOBAL_ENV:
   gogs_repositories_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ GOGS_SSH_PORT }}"
   nexus_repositories_url: "{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, hostvars[inventory_hostname]['ansible_default_ipv4']['address']) }}:{{ NEXUS_PORT }}"
