--- a/ansible/roles/common/tasks/setup_dependencies.yml
+++ b/ansible/roles/common/tasks/setup_dependencies.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Install python and python-pip"
+- name: "Install python, python-pip and usefull tools"
   ansible.builtin.apt:
     pkg: [python3, python3-pip, apt-transport-https, ca-certificates, apache2-utils, software-properties-common, curl, nano, tree, htop, git]
     state: present
