disable script in nexus when finishing installation

--- a/ansible/roles/infra_storage/tasks/setup_nexus.yml
+++ b/ansible/roles/infra_storage/tasks/setup_nexus.yml
@@ -299,6 +299,11 @@
   with_items:
     - bypass_wizard
 
+- name: "Ensure script engine is disabled"
+  ansible.builtin.lineinfile:
+    path: "/{{ DATACORE }}/nexus/etc/nexus.properties"
+    line: "nexus.scripts.allowCreation=false"
+
 - name: "set nexus container final state ({{ NEXUS_DEFAULT_STATE }})"
   community.general.docker_container:
     name: "nexus"
