--- a/ansible/roles/infra_storage/tasks/setup_nexus.yml
+++ b/ansible/roles/infra_storage/tasks/setup_nexus.yml
@@ -1,9 +1,18 @@
 ---
+- name: "Get user ID"
+  ansible.builtin.shell: "id -u {{ USER_NAME }}"
+  register: user_id
+
+- name: "Get group ID"
+  ansible.builtin.shell: "id -g {{ USER_NAME }}"
+  register: group_id
+
 - name: "Set correct owner of full nexus data directory"
   ansible.builtin.file:
     path: "/{{DATACORE}}/nexus"
-    owner: "200"
-    group: "200"
+    owner: "{{ user_id.stdout }}"
+    group: "{{ group_id.stdout }}"
+    mode: 0777
     recurse: yes
 
 - name: "Remove previous nexus tmp directory"
@@ -50,6 +59,7 @@
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
+    user: "{{ user_id.stdout }}:{{ group_id.stdout }}"
     ports:
       - "{{ NEXUS_PORT_CONFIG }}:8081"
     volumes:
@@ -72,6 +82,11 @@
     regexp: "nexus.scripts.allowCreation=false"
     replace: "nexus.scripts.allowCreation=true"
 
+- name: "Ensure script engine is enabled"
+  ansible.builtin.lineinfile:
+    dest: "/{{ DATACORE }}/nexus/etc/nexus.properties"
+    line: "nexus.scripts.allowCreation=true"
+
 - name: "Read nexus admin password file content"
   ansible.builtin.shell: cat /{{ DATACORE }}/nexus/admin.password
   register: admin_password_file_content
@@ -86,6 +101,7 @@
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
+    user: "{{ user_id.stdout }}:{{ group_id.stdout }}"
     ports:
       - "{{ NEXUS_PORT_CONFIG }}:8081"
     volumes:
@@ -315,6 +331,7 @@
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
+    user: "{{ user_id.stdout }}:{{ group_id.stdout }}"
     ports:
   #      - "{{ NEXUS_PORT_CONFIG }}:8081"
   #      - "{{ NEXUS_DOCKER_PULL_PORT }}:{{ NEXUS_DOCKER_PULL_PORT }}"
