--- a/ansible/roles/infra_productivity/vars/main.yml
+++ b/ansible/roles/infra_productivity/vars/main.yml
@@ -10,3 +10,8 @@ ODOO_PORT: "8057"
 ODOO_EXTERNAL_URL: "erp.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 ODOO_DB_USER: "odoo"
 ODOO_DEFAULT_STATE: stopped
+
+IT_TOOLS_VERSION: "2023.4.23-92bd835"
+IT_TOOLS_PORT: "8058"
+IT_TOOLS_EXTERNAL_URL: "tools.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+IT_TOOLS_DEFAULT_STATE: stopped
