--- a/ansible/roles/infra_storage/tasks/main.yml
+++ b/ansible/roles/infra_storage/tasks/main.yml
@@ -3,7 +3,7 @@
   when: ("fdroid" not in SKIP_SERVICES)
 
 - import_tasks: setup_nexus.yml
-  when: ("nexus" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
+  when: ("nexus" not in SKIP_SERVICES) and ansible_architecture in ["amd64", "x86_64"]
 
 - import_tasks: setup_nextcloud.yml
   when: ("nextcloud" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
