add label-studio service, don't work for arm

--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -75,6 +75,7 @@
       - "{{ GROCY_PORT }}:{{ GROCY_PORT }}"
       - "{{ ODOO_PORT }}:{{ ODOO_PORT }}"
       - "{{ IT_TOOLS_PORT }}:{{ IT_TOOLS_PORT }}"
+      - "{{ LABEL_STUDIO_PORT }}:{{ LABEL_STUDIO_PORT }}"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/traefik/certs/:/certs/"
