--- a/ansible/roles/infra/tasks/setup_homepage.yml
+++ b/ansible/roles/infra/tasks/setup_homepage.yml
@@ -14,33 +14,34 @@
     group: "{{ USER_NAME }}"
     mode: 0644
   with_items:
-    - index.html
-    - services.json
+    - settings.yaml
+    - services.yaml
 
-- name: "Launch homepage nginx container {{ NGINX_VERSION }}"
+- name: "Launch homepage container {{ HOMEPAGE_VERSION }}"
   community.general.docker_container:
     name: "homepage"
-    image: "nginx:{{ NGINX_VERSION }}"
+    image: "ghcr.io/benphelps/homepage:{{ HOMEPAGE_VERSION }}"
     state: started
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
 #    ports:
-#      - "{{ NGINX_FRONT_PORT }}:80"
+#      - "{{ HOMEPAGE_FRONT_PORT }}:80"
     volumes:
-      - "/{{ DATACORE }}/homepage:/usr/share/nginx/html:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/{{ DATACORE }}/homepage:/app/config"
     labels:
       traefik.enable: "true"
-      traefik.http.services.homepage.loadbalancer.server.port: "80"
+      traefik.http.services.homepage.loadbalancer.server.port: "3000"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.homepage_http.middlewares: "https_redirect"
-      traefik.http.routers.homepage_http.rule: "Host(`{{ NGINX_EXTERNAL_URL }}`)"
+      traefik.http.routers.homepage_http.rule: "Host(`{{ HOMEPAGE_EXTERNAL_URL }}`)"
       traefik.http.routers.homepage_http.service: homepage
-      traefik.http.routers.homepage_https.rule: "Host(`{{ NGINX_EXTERNAL_URL }}`)"
+      traefik.http.routers.homepage_https.rule: "Host(`{{ HOMEPAGE_EXTERNAL_URL }}`)"
       traefik.http.routers.homepage_https.service: homepage
       traefik.http.routers.homepage_https.tls: "true"
       # add this to use traefik as a proxy with tls (http will not be available)
-      traefik.http.services.homepage_proxy.loadbalancer.server.port: "80"
+      traefik.http.services.homepage_proxy.loadbalancer.server.port: "3000"
       traefik.http.routers.homepage_proxy.service: homepage_proxy
       traefik.http.routers.homepage_proxy.entrypoints: homepage
       traefik.http.routers.homepage_proxy.rule: "{{ global_proxy_rule }}"
