--- a/ansible/roles/infra_ml/tasks/setup_label_studio.yml
+++ b/ansible/roles/infra_ml/tasks/setup_label_studio.yml
@@ -22,7 +22,7 @@
       - "/{{ DATACORE }}/label-studio:/label-studio/data"
     labels:
       traefik.enable: "true"
-      traefik.http.services.grocy.loadbalancer.server.port: "80"
+      traefik.http.services.label_studio.loadbalancer.server.port: "8080"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.label_studio_http.middlewares: "https_redirect"
       traefik.http.routers.label_studio_http.rule: "Host(`{{ LABEL_STUDIO_EXTERNAL_URL }}`)"
@@ -31,7 +31,7 @@
       traefik.http.routers.label_studio_https.service: label_studio
       traefik.http.routers.label_studio_https.tls: "true"
       # add this to use traefik as a proxy with tls (http will not be available)
-      traefik.http.services.label_studio_proxy.loadbalancer.server.port: "80"
+      traefik.http.services.label_studio_proxy.loadbalancer.server.port: "8080"
       traefik.http.routers.label_studio_proxy.service: label_studio_proxy
       traefik.http.routers.label_studio_proxy.entrypoints: label_studio
       traefik.http.routers.label_studio_proxy.rule: "{{ global_proxy_rule }}"
