--- a/ansible/roles/infra_productivity/vars/main.yml
+++ b/ansible/roles/infra_productivity/vars/main.yml
@@ -16,3 +16,8 @@ IT_TOOLS_VERSION: "2023.5.14-77f2efc"
 IT_TOOLS_PORT: "8058"
 IT_TOOLS_EXTERNAL_URL: "tools.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 IT_TOOLS_DEFAULT_STATE: stopped
+
+ONLYOFFICE_VERSION: "7.3.2"
+ONLYOFFICE_PORT: "8059"
+ONLYOFFICE_EXTERNAL_URL: "desk.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+ONLYOFFICE_DEFAULT_STATE: stopped
