--- a/ansible/roles/infra_ml/vars/main.yml
+++ b/ansible/roles/infra_ml/vars/main.yml
@@ -3,3 +3,8 @@ LABEL_STUDIO_VERSION: "1.9.1"
 LABEL_STUDIO_PORT: "8060"
 LABEL_STUDIO_EXTERNAL_URL: "label.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 LABEL_STUDIO_DEFAULT_STATE: stopped
+
+AUDIO_WEBUI_VERSION: "Dockerize"
+AUDIO_WEBUI_PORT: "8061"
+AUDIO_WEBUI_EXTERNAL_URL: "audio.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+AUDIO_WEBUI_DEFAULT_STATE: stopped
