--- a/ansible/roles/infra_ml/tasks/main.yml
+++ b/ansible/roles/infra_ml/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - import_tasks: setup_label_studio.yml
   when: ("label" not in SKIP_SERVICES) and ansible_architecture in ["amd64", "x86_64"]
+
+- import_tasks: setup_audio_webui.yml
+  when: ("audio" not in SKIP_SERVICES) and with_nvidia_gpu is defined
